--- a/elements/assets/css/thumbnails-slider.css
+++ b/elements/assets/css/thumbnails-slider.css
@@ -50,7 +50,7 @@
 /* Right position */
 .rony-thumbnails-slider-wrapper.thumbnails-position-right {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   gap: 10px;
 }
 
