--- a/admin/css/rony-bricks-builder-addons-admin.css
+++ b/admin/css/rony-bricks-builder-addons-admin.css
@@ -2,3 +2,35 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+/* Settings Page */
+.rony-bricks-elements-settings .form-table th {
+  padding: 20px 10px;
+}
+
+.rony-bricks-elements-settings .form-table td {
+  padding: 20px 10px;
+}
+
+.rony-bricks-elements-settings .form-table label {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+}
+
+.rony-bricks-elements-settings .form-table input[type="checkbox"] {
+  margin-right: 10px;
+  transform: scale(1.2);
+}
+
+.rony-bricks-elements-settings h2 {
+  margin-top: 30px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+  font-size: 1.3em;
+}
+
+.rony-bricks-elements-settings p.submit {
+  margin-top: 20px;
+  padding-top: 15px;
+}
